--- a/README.Rmd
+++ b/README.Rmd
@@ -127,7 +127,7 @@ You can install the development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("mverseanalysis/mverse")
+devtools::install_github("mverseanalysis/mverse", build_vignettes = TRUE)
 ```
 
 ## Usage
